# COMM061-NLP-CW

./: .gitignore  playground.ipynb  pyproject.toml
nlp_cw/: __init__.py  get_dataset.py  tokenize_dataset.py  trainer.py
