[project]
name = "nlp_cw"
dynamic = ["version"]
requires-python = ">= 3.8"
dependencies = [
  "torch",
  "accelerate",
  "transformers",
  "datasets",
  "evaluate",
  "seqeval",
  "wandb",
  "tensorboard",
  "simple_parsing",
]

[tool.setuptools.packages.find]
include = ["nlp_cw*"]

[project.scripts]
nlpcw_train = "nlp_cw:main_cli"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.setuptools.dynamic]
version = {attr = "nlp_cw.__version__"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"